# digital_library_django_ninja

./: .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
digital_library/: api.py  apps.py  models.py  schemas.py
digital_library_django_ninja/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_api.py
tests/factories/: digital_library.py
tests/test_models/: test_api.py
